// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside a bold 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "marks": [
            {
              "type": "strong",
            },
          ],
          "text": "this ABC-10 is an important smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside double quotes 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": ""ABC-10"",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue inside single quotes 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "'ABC-10'",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issue key mixed in a text 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "YXZABC-10",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues if context is not provided 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ABC-10 is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a code macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": "java",
        "uniqueId": null,
      },
      "content": [
        {
          "text": "ABC-10",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a media 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this is a media ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "layout": "center",
        "width": null,
        "widthType": null,
      },
      "content": [
        {
          "attrs": {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "__mediaTraceId": null,
            "alt": "",
            "collection": "",
            "height": 183,
            "id": "abc-123",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 200,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues inside a noformat macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "language": null,
        "uniqueId": null,
      },
      "content": [
        {
          "text": "ABC-10",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " is not a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should not parse issues not present in the context 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this issue wasn't provided in the context XYZ-99",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h1 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 1,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h2 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 2,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h3 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 3,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h4 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 4,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h5 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 5,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a h6 1`] = `
{
  "content": [
    {
      "attrs": {
        "level": 6,
        "localId": null,
      },
      "content": [
        {
          "text": "smart card in the title ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
      ],
      "type": "heading",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a list item 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "this ",
                  "type": "text",
                },
                {
                  "attrs": {
                    "data": null,
                    "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
                  },
                  "type": "inlineCard",
                },
                {
                  "text": " is a smart card",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a panel macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "attrs": {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "data": null,
                "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
              },
              "type": "inlineCard",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "panel",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a quote macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "localId": null,
          },
          "content": [
            {
              "attrs": {
                "data": null,
                "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
              },
              "type": "inlineCard",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside a table cell 1`] = `
{
  "content": [
    {
      "attrs": {
        "__autoSize": false,
        "displayMode": null,
        "isNumberColumnEnabled": false,
        "layout": "default",
        "localId": "",
        "width": null,
      },
      "content": [
        {
          "content": [
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "localId": null,
                  },
                  "content": [
                    {
                      "text": "foo",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            {
              "attrs": {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": [
                {
                  "attrs": {
                    "localId": null,
                  },
                  "content": [
                    {
                      "attrs": {
                        "data": null,
                        "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
                      },
                      "type": "inlineCard",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issue inside brackets 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues after an exclaimation mark 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this !",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues in between exclaimation mark 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this !",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " !",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        {
          "text": " are smart cards",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside a color macro 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside a list, inside a color macro 1`] = `
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "attrs": {
                "localId": null,
              },
              "content": [
                {
                  "text": "this ",
                  "type": "text",
                },
                {
                  "attrs": {
                    "data": null,
                    "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
                  },
                  "type": "inlineCard",
                },
                {
                  "text": " is a smart card",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside exclaimation mark 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this !",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " ! is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues inside parentheses 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this (",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": ") is a smart card",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues that end with a colon 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " text ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": ":",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues that end with a comma 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " text ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        {
          "text": ", ABC-30",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues that end with a forward slash 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": "/",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse issues that end with a period 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "this ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " text ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        {
          "text": ".",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Issue key (smart card) should parse more than one issue inside a paragraph 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-10#icft=ABC-10",
          },
          "type": "inlineCard",
        },
        {
          "text": " and ",
          "type": "text",
        },
        {
          "attrs": {
            "data": null,
            "url": "https://instance.atlassian.net/browse/ABC-20#icft=ABC-20",
          },
          "type": "inlineCard",
        },
        {
          "text": " are smart cards",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
